force-app/main/default/objects/Service_After_Sales_Insights__c/Service_After_Sales_Insights__c.object-meta.xml
<CustomObject>
    <label>Service &amp; After-Sales Insights</label>
    <nameField>
        <displayFormat>SAS-{0000}</displayFormat>
        <label>Service &amp; After-Sales Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service &amp; After-Sales Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>