force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Actual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date__c</fullName>
    <label>Actual Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>