force-app/main/default/objects/Service_After_Sales_Insights__c/fields/After_Sales_Influenced_Purchase__c.field-meta.xml
<CustomField>
    <fullName>After_Sales_Influenced_Purchase__c</fullName>
    <label>After-Sales Influenced Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>