force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Communication_Mode_Used__c.field-meta.xml
<CustomField>
    <fullName>Communication_Mode_Used__c</fullName>
    <label>Communication Mode Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>