force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Complaint_Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Resolution_Status__c</fullName>
    <label>Complaint Resolution Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>