force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Complaint_Severity__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Severity__c</fullName>
    <label>Complaint Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>