force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Customer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_Status__c</fullName>
    <label>Customer Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>