force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Customer_Complaints_Logged__c.field-meta.xml
<CustomField>
    <fullName>Customer_Complaints_Logged__c</fullName>
    <label>Customer Complaints Logged</label>
    <length>255</length>
    <type>Text</type>
</CustomField>