force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Customer_Declared_Usage_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Customer_Declared_Usage_Pattern__c</fullName>
    <label>Customer Declared Usage Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>