force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Customer_Misuse_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Customer_Misuse_Indicator__c</fullName>
    <label>Customer Misuse Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>