force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service &amp; After-Sales Insights</relationshipLabel>
    <relationshipName>Service_After_Sales_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>