force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Damage_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Damage_Assessment__c</fullName>
    <label>Damage Assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>