force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Final_Service_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Final_Service_Remarks__c</fullName>
    <label>Final Service Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>