force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Net_Service_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Net_Service_Sentiment__c</fullName>
    <label>Net Service Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>