force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Number_of_Follow_Ups_Made__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follow_Ups_Made__c</fullName>
    <label>Number of Follow-Ups Made</label>
    <length>255</length>
    <type>Text</type>
</CustomField>