force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Parts_Replaced__c.field-meta.xml
<CustomField>
    <fullName>Parts_Replaced__c</fullName>
    <label>Parts Replaced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>