force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Post_Service_Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Post_Service_Customer_Rating__c</fullName>
    <label>Post-Service Customer Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>