force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Product_Condition_at_Inward__c.field-meta.xml
<CustomField>
    <fullName>Product_Condition_at_Inward__c</fullName>
    <label>Product Condition at Inward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>