force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Repeat_Issue_After_Service__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Issue_After_Service__c</fullName>
    <label>Repeat Issue After Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>