force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Replacement_vs_Repair_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Replacement_vs_Repair_Recommendation__c</fullName>
    <label>Replacement vs Repair Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>