force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost_Estimate__c</fullName>
    <label>Service Cost Estimate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>