force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Cost_Final__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost_Final__c</fullName>
    <label>Service Cost Final</label>
    <length>255</length>
    <type>Text</type>
</CustomField>