force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <label>Service Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>