force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Location_Branch__c.field-meta.xml
<CustomField>
    <fullName>Service_Location_Branch__c</fullName>
    <label>Service Location (Branch)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>