force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Priority__c.field-meta.xml
<CustomField>
    <fullName>Service_Priority__c</fullName>
    <label>Service Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>