force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Recovery_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Service_Recovery_Action_Taken__c</fullName>
    <label>Service Recovery Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>