force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Recurrence_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Service_Recurrence_Pattern__c</fullName>
    <label>Service Recurrence Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>