force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Severity_Level__c</fullName>
    <label>Service Severity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>