force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Status__c</fullName>
    <label>Service Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>