force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Service_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Service_Subtype__c</fullName>
    <label>Service Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>