force-app/main/default/objects/Service_After_Sales_Insights__c/fields/SLA_Breach_Flag__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Flag__c</fullName>
    <label>SLA Breach Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>