force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Total_After_Sales_Requests__c.field-meta.xml
<CustomField>
    <fullName>Total_After_Sales_Requests__c</fullName>
    <label>Total After-Sales Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>