force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Type_of_Service_Requested_Primary__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Service_Requested_Primary__c</fullName>
    <label>Type of Service Requested (Primary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>