force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Warranty_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Applicable__c</fullName>
    <label>Warranty Applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>