force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Warranty_Duration_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Duration_Remaining__c</fullName>
    <label>Warranty Duration Remaining</label>
    <length>255</length>
    <type>Text</type>
</CustomField>