force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Workshop_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Assigned__c</fullName>
    <label>Workshop Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>