force-app/main/default/objects/Service_After_Sales_Insights__c/fields/Workshop_TAT_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Workshop_TAT_Compliance__c</fullName>
    <label>Workshop TAT Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>